tests/snapshots/run_wpt_conformance__trtx_softplus_float32_1D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "softplus.https.any.js",
    "softplus float32 1D tensor",
    "trtx",
    "PASS",
)
